--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -25,18 +25,14 @@
   font-style: normal;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-}
-
 body {
   width: 100%;
   min-height: 100vw;
   background-color: var(--white-color);
   font-family: var(--primary-font), sans-serif;
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
+}
+h1 {
+  font-weight: 900;
 }
