--- a/src/style/_breakpoint.scss
+++ b/src/style/_breakpoint.scss
@@ -4,4 +4,11 @@
       @content;
     }
   }
+  @if $breakpoint == md {
+    @media screen and (min-width: $breakpoint-md) {
+      @content;
+    }
+  } @else {
+    @warn "Breakpoint '#{$breakpoint}' not supported";
+  }
 }
