--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -16,6 +16,7 @@ footer {
         }
         .icon-container {
           display: flex;
+          flex-wrap: wrap;
           gap: 0.5rem;
           align-items: center;
           a {
