--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -31,7 +31,7 @@ $breakpoint-md: 768px;
 
 body {
   width: 100%;
-  min-height: 100vw;
+  min-height: 100vh;
   background-color: var(--white-color);
   font-family: var(--primary-font), sans-serif;
   /* display: flex;
