feat:新增New Arrivals區域；分類brands區域圖片；刪除brands區域大螢幕下overflow屬性

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -3,6 +3,7 @@
   --white-color: #ffffff;
   --black-color: #000000;
   --gray-color: #c2c8da;
+  --dark-gray-color: #7f7f7f;
   --light-gray-color: #f4f6f5;
   --primary-font: "Poppins", sans-serif;
 }
@@ -37,8 +38,15 @@ body {
   /* display: flex;
   justify-content: center; */
 }
-h1 {
+h1,
+h2 {
   font-weight: 900;
+}
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 500;
 }
 a {
   text-decoration: none;
