--- a/src/style/_brands.scss
+++ b/src/style/_brands.scss
@@ -16,3 +16,13 @@
     }
   }
 }
+
+@include respond-to(lg) {
+  .brands {
+    .container {
+      .img-container {
+        overflow-x: auto;
+      }
+    }
+  }
+}
