--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,8 @@
 @import "./base.scss";
 @import "./_breakpoint.scss";
+@import "./animate.scss";
 @import "./nav.scss";
 @import "./hero.scss";
 @import "./brands.scss";
-
+@import "./newArrivals.scss";
 @import "./footer.scss";
