--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -5,5 +5,7 @@
 @import "./hero.scss";
 @import "./brands.scss";
 @import "./newArrivals.scss";
+@import "./card.scss";
+@import "./youngFav.scss";
 @import "./payday";
 @import "./footer.scss";
