feat:新增card img的transform動畫；新增nav li的hover變色

--- a/src/style/_card.scss
+++ b/src/style/_card.scss
@@ -1,7 +1,14 @@
 .custom-card {
   border: none;
+  .img-container {
+    overflow: hidden;
+  }
   img {
     object-fit: cover;
+    transition: all 0.25s ease;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
   .card-info {
     margin-top: 1rem;
