--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -17,6 +17,9 @@ nav {
     li {
       font-size: 1rem;
       cursor: pointer;
+      &:hover {
+        color: var(--primary-color);
+      }
       .nav-btn {
         padding: 0.5rem 0.75rem;
         background-color: var(--black-color);
