--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -9,4 +9,6 @@
 @import "./youngFav.scss";
 @import "./payday";
 @import "./sendEmail";
+@import "./asideBar";
+@import "./shopPage";
 @import "./footer.scss";
