--- a/src/style/_nav.scss
+++ b/src/style/_nav.scss
@@ -1,12 +1,17 @@
-nav {
+.navbar {
   .logo {
     cursor: pointer;
-    img {
-      height: 1.5rem;
-    }
-    h1 {
-      font-size: 1.75rem;
-      margin: 0;
+    a {
+      display: flex;
+      align-items: center;
+      color: var(--black-color);
+      img {
+        height: 1.5rem;
+      }
+      h1 {
+        font-size: 1.75rem;
+        margin: 0;
+      }
     }
   }
   ul {
@@ -14,9 +19,13 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    li {
+    a {
       font-size: 1rem;
+      color: var(--black-color);
       cursor: pointer;
+      &.active {
+        color: var(--primary-color);
+      }
       &:hover {
         color: var(--primary-color);
       }
