--- a/src/style/main.css
+++ b/src/style/main.css
@@ -388,6 +388,59 @@ a {
   margin: 2rem 0;
 }
 
+.product-info {
+  margin: 0;
+  gap: 0.5rem;
+}
+
+.color-picker input[type=radio] {
+  display: none;
+}
+.color-picker input[type=radio]:checked + label span {
+  transform: scale(1.25);
+}
+.color-picker input[type=radio]:checked + label .color-picker-gray {
+  border: 2px solid #5b5b5b;
+}
+.color-picker input[type=radio]:checked + label .color-picker-red {
+  border: 2px solid #711313;
+}
+.color-picker input[type=radio]:checked + label .color-picker-white {
+  border: 2px solid #bfbfbf;
+}
+.color-picker input[type=radio]:checked + label .color-picker-blue {
+  border: 2px solid #103f62;
+}
+.color-picker label {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  margin-right: 10px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+.color-picker label:hover span {
+  transform: scale(1.25);
+}
+.color-picker label span {
+  display: block;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.2s ease-in-out;
+}
+.color-picker label span.color-picker-gray {
+  background: #9b9b9b;
+}
+.color-picker label span.color-picker-red {
+  background: #db2828;
+}
+.color-picker label span.color-picker-white {
+  background: #ffffff;
+}
+.color-picker label span.color-picker-blue {
+  background: #2185d0;
+}
+
 footer {
   background-color: var(--black-color);
   color: var(--gray-color);
