--- a/src/style/main.css
+++ b/src/style/main.css
@@ -441,6 +441,73 @@ a {
   background: #2185d0;
 }
 
+.cart-list {
+  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  gap: 10px;
+  scrollbar-gutter: stable;
+}
+
+.shopping-notice {
+  margin-top: 16px;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 0.8rem;
+}
+
+.cart-item {
+  width: 100%;
+  max-height: 200px;
+  padding: 20px;
+  background-color: #faf9f8;
+  border-radius: 0.5rem;
+  gap: 16px;
+}
+.cart-item h5 {
+  margin-bottom: 4px;
+}
+.cart-item .cart-item-img {
+  width: 100px;
+  flex-shrink: 0;
+}
+.cart-item .cart-item-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+}
+.cart-item .cart-item-text {
+  width: 100%;
+}
+.cart-item .cart-item-text span {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+.cart-item .cart-item-text .cart-item-detail {
+  margin: 10px 0;
+  gap: 20px;
+  list-style: none;
+  padding: 0;
+}
+.cart-item .cart-item-text .cart-item-detail li {
+  display: flex;
+  gap: 10px;
+}
+.cart-item .cart-item-text .cart-item-detail li span {
+  font-size: 0.8rem;
+}
+.cart-item .cart-item-text .cart-item-button {
+  display: flex;
+  justify-content: space-between;
+  flex: 1;
+}
+.cart-item .cart-item-text .cart-item-button select {
+  width: 100px;
+  border-radius: 0.5rem;
+}
+
 footer {
   background-color: var(--black-color);
   color: var(--gray-color);
